--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 
+# Build results
+
+[Dd]ebug/
+[Rr]elease/
+x64/
+build/
+[Bb]in/
+[Oo]bj/
+
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
