--- a/SpeedwayClientWpf.csproj
+++ b/SpeedwayClientWpf.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>ReaderControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="LogMessage.cs" />
+    <Compile Include="Tracer.cs" />
     <Compile Include="ViewModels\ReaderViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
