--- a/SpeedwayClientWpf.csproj
+++ b/SpeedwayClientWpf.csproj
@@ -37,6 +37,9 @@
     <ApplicationIcon>Rfid-Tag.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Renci.SshNet">
+      <HintPath>.\Renci.SshNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
