--- a/App.config
+++ b/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="FolderPath" value="C:\" />
+    <add key="TagFilter" value="" />
+    <add key="RereadTime" value="20" />
+    <add key="ListenerPort" value="23" />
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
