--- a/App.config
+++ b/App.config
@@ -5,6 +5,8 @@
     <add key="TagFilter" value="" />
     <add key="RereadTime" value="20" />
     <add key="ListenerPort" value="23" />
+    <add key="AddDateToOutput" value="false"/>
+    <add key="AddReaderInfoToOutput" value="false"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
