--- a/App.config
+++ b/App.config
@@ -1,14 +1,38 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- custom section to store readers settings-->
+    <section name="speedwayclientwpf.readers" type="SpeedwayClientWpf.ReadersConfigurationSection, SpeedwayClientWpf" requirePermission="false" />
+  </configSections>
+  <speedwayclientwpf.readers>
+    <reader name="Reader 1" ipaddress="172.16.5.25" port="14150" />
+    <reader name="Reader 2" ipaddress="172.16.5.25" port="14150" />
+    <reader name="Reader 3" ipaddress="172.16.5.25" port="14150" />
+    <reader name="Reader 4" ipaddress="172.16.5.25" port="14150" />
+  </speedwayclientwpf.readers>
   <appSettings>
     <add key="FolderPath" value="C:\" />
     <add key="TagFilter" value="" />
     <add key="RereadTime" value="20" />
+    <add key="LocalIpAddress" value="" />
     <add key="ListenerPort" value="23" />
-    <add key="AddDateToOutput" value="false"/>
-    <add key="AddReaderInfoToOutput" value="false"/>
+    <add key="AddDateToOutput" value="false" />
+    <add key="AddReaderInfoToOutput" value="false" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
