comments for config work

--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- custom section to store readers settings-->
+    <!-- our custom section to store readers settings-->
     <section name="speedwayclientwpf.readers" type="SpeedwayClientWpf.ReadersConfigurationSection, SpeedwayClientWpf" requirePermission="false" />
   </configSections>
   <speedwayclientwpf.readers>
@@ -11,28 +11,22 @@
     <reader name="Reader 4" ipaddress="172.16.5.25" port="14150" />
   </speedwayclientwpf.readers>
   <appSettings>
+    <!-- folder to save output files -->
     <add key="FolderPath" value="C:\" />
+    <!-- some string to filter tags -->
     <add key="TagFilter" value="" />
+    <!-- time to check if tag was seen before, seconds -->
     <add key="RereadTime" value="20" />
+    <!-- IP address of the computer running the application -->
     <add key="LocalIpAddress" value="" />
+    <!-- port of the computer running the application -->
     <add key="ListenerPort" value="23" />
+    <!-- add date to file output-->
     <add key="AddDateToOutput" value="false" />
+    <!-- add reader id & antenna id to file output -->
     <add key="AddReaderInfoToOutput" value="false" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
