some other comments

--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- our custom section to store readers settings-->
+    <!-- our custom section to store the readers settings-->
     <section name="speedwayclientwpf.readers" type="SpeedwayClientWpf.ReadersConfigurationSection, SpeedwayClientWpf" requirePermission="false" />
   </configSections>
   <speedwayclientwpf.readers>
@@ -11,7 +11,7 @@
     <reader name="Reader 4" ipaddress="172.16.5.25" port="14150" />
   </speedwayclientwpf.readers>
   <appSettings>
-    <!-- folder to save output files -->
+    <!-- a folder to save output files -->
     <add key="FolderPath" value="C:\" />
     <!-- some string to filter tags -->
     <add key="TagFilter" value="" />
@@ -21,9 +21,9 @@
     <add key="LocalIpAddress" value="" />
     <!-- port of the computer running the application -->
     <add key="ListenerPort" value="23" />
-    <!-- add date to file output-->
+    <!-- add date to the file output-->
     <add key="AddDateToOutput" value="false" />
-    <!-- add reader id & antenna id to file output -->
+    <!-- add reader id & antenna id to the file output -->
     <add key="AddReaderInfoToOutput" value="false" />
   </appSettings>
   <startup>
