Sounds + separated Settings

--- a/App.config
+++ b/App.config
@@ -25,6 +25,14 @@
     <add key="AddDateToOutput" value="false" />
     <!-- add reader id & antenna id to the file output -->
     <add key="AddReaderInfoToOutput" value="false" />
+    <!-- play sound for each record read -->
+    <add key="PlaySoundForRead" value="false"/>
+    <!-- path to the file playing for each record read -->
+    <add key="ReadSoundFilePath" value="Resources\01.wav"/>
+    <!-- play sound when filtered record read-->
+    <add key="PlaySoundForFilteredRead" value="true"/>
+    <!-- path to the file playing when filtered record read-->
+    <add key="FilteredReadSoundFilePath" value="Resources\02.wav"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
