--- a/App.config
+++ b/App.config
@@ -33,6 +33,8 @@
     <add key="PlaySoundForFilteredRead" value="true"/>
     <!-- path to the file playing when filtered record read-->
     <add key="FilteredReadSoundFilePath" value="Resources\02.wav"/>
+    <!-- can user set custom dateTime to all readers -->
+    <add key="UpdateReadersTimeManually" value="false"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
